# MacVirtualCamera

./: .gitignore  CMakeLists.txt  README.md
cmake/: AppEntitlements.plist  AppInfo.plist.in
extension/: CameraDeviceSource.swift  CameraProviderSource.swift  CameraStreamSink.swift  CameraStreamSource.swift  Entitlements.plist  Info.plist.in  main.swift
src/: MacVirtualCamera.mm
